objects/icobj1__x.object
<CustomObject>
    <externalDataSource>EswarDataSourceTest1</externalDataSource>
    <externalName>exdts1</externalName>
    <fields>
        <fullName>field1__c</fullName>
        <description>filed for testing purpose</description>
        <inlineHelpText>filed for testing purpose</inlineHelpText>
        <label>field1</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <description>filed for testing purpose</description>
        <inlineHelpText>filed for testing purpose</inlineHelpText>
        <label>field2</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <description>filed for testing purpose</description>
        <inlineHelpText>filed for testing purpose</inlineHelpText>
        <label>field3</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <label>icobj1</label>
    <pluralLabel>icobj1s</pluralLabel>
</CustomObject>